# MTRX3760_Assignment_1

./: README.md
george_wip/george_driver/src/: taylor_driver.cpp
george_wip/launch/: tay_maze.launch.py
george_wip/simple_driver/: package.xml
george_wip/simple_driver/include/simple_driver/: simple_driver.hpp
george_wip/simple_driver/src/: simple_driver.cpp
install/: local_setup.sh  setup.sh
install/include/colour_detector/: colour_detector.hpp
install/include/turtlebot3_msgs/turtlebot3_msgs/action/detail/: patrol__description.c
install/include/turtlebot3_msgs/turtlebot3_msgs/srv/detail/: dqn__description.c  sound__description.c
install/lib/colour_detector/: colour_detector_node
install/lib/trajectory_mapper/: trajectory_mapper_node
install/share/ament_index/resource_index/package_run_dependencies/: colour_detector  maze_driver  trajectory_mapper
install/share/colour_detector/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/colour_detector/cmake/: colour_detectorConfig.cmake
install/share/dynamixel_sdk/: local_setup.sh  package.sh
install/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
install/share/dynamixel_sdk_examples/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/maze_driver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/maze_driver/cmake/: maze_driverConfig.cmake
install/share/trajectory_mapper/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/turtlebot3/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/turtlebot3_bringup/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_cartographer/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/turtlebot3_description/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_example/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_fake_node/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_gazebo/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_gazebo/launch/: island_maze.launch.py  island_maze_cam.launch.py  open_maze.launch.py  spawn_turtlebot3.launch.py  tay_maze.launch.py
install/share/turtlebot3_gazebo/worlds/: island_maze.world
install/share/turtlebot3_msgs/: package.sh
install/share/turtlebot3_navigation2/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/turtlebot3_node/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/turtlebot3_simulations/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/turtlebot3_teleop/: package.sh
log/: latest_build
marcus_wip/: CMakeLists.txt  package.xml
marcus_wip/george_driver/include/taylor_driver/: taylor_driver.hpp
marcus_wip/george_driver/src/: main.cpp  taylor_driver.cpp
marcus_wip/include/lidar_processor/: lidar_processor.hpp
marcus_wip/src/: lidar_processor.cpp
marcus_wip/trajectory_mapper/: CMakeLists.txt  package.xml
marcus_wip/trajectory_mapper/include/trajectory_mapper/: trajectory_mapper.hpp
marcus_wip/trajectory_mapper/launch/: slam_trajectory.launch.py
marcus_wip/trajectory_mapper/scripts/: maze_visualizer.py
marcus_wip/trajectory_mapper/src/: trajectory_mapper.cpp
marcus_wip/wall_follower/: CMakeLists.txt  package.xml
marcus_wip/wall_follower/include/wall_follower/: wall_follower.hpp
marcus_wip/wall_follower/src/: main.cpp  wall_follower.cpp
max_wip/: camera_explanation.txt
max_wip/colour_detector/: CMakeLists.txt  package.xml
max_wip/colour_detector/src/: colour_detector.cpp
max_wip/launch/: island_maze.launch.py  island_maze_cam.launch.py
max_wip/maze_driver/: CMakeLists.txt
max_wip/maze_driver/include/maze_driver/: base_driver.hpp  right_wall_driver.hpp
max_wip/maze_driver/src/: main.cpp  right_wall_driver.cpp
max_wip/simple_driver/: CMakeLists.txt  package.xml
max_wip/simple_driver/include/simple_driver/: simple_driver.hpp
max_wip/simple_driver/src/: main.cpp  simple_driver.cpp
max_wip/taylor_driver/: CMakeLists.txt  package.xml
max_wip/taylor_driver/include/taylor_driver/: taylor_driver.hpp
max_wip/taylor_driver/src/: taylor_driver.cpp
max_wip/worlds/: island_maze.world
src/colour_detector/: CMakeLists.txt
src/colour_detector/src/: main.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/maze_driver/include/maze_driver/: base_driver.hpp  right_wall_driver.hpp
src/maze_driver/src/: base_driver.cpp  right_wall_driver.cpp
src/trajectory_mapper/: CMakeLists.txt  package.xml
src/trajectory_mapper/include/trajectory_mapper/: trajectory_mapper.hpp
src/trajectory_mapper/src/: trajectory_mapper.cpp
tay_wip/launch/: tay_maze.launch.py
tay_wip/simple_driver/: CMakeLists.txt
tay_wip/taylor_driver/include/taylor_driver/: taylor_driver.hpp
tay_wip/taylor_driver_og/src/: taylor_driver.cpp
tay_wip/taylor_driver_rightwall/: CMakeLists.txt  package.xml
tay_wip/taylor_driver_rightwall/include/taylor_driver/: taylor_driver.hpp
tay_wip/taylor_driver_rightwall/src/: taylor_driver.cpp
tay_wip/trajectory_mapper/launch/: slam_trajectory.launch.py
tay_wip/trajectory_mapper/scripts/: maze_visualizer.py
tay_wip/trajectory_mapper/src/: main.cpp  trajectory_mapper.cpp
tay_wip/worlds/: open_maze.world  tay_maze.world
