<?xml version="1.0"?>
<package format="3">
  <name>simple_driver</name>
  <version>0.0.1</version>
  <description>Publishes TwistStamped to /cmd_vel with wall-following logic.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend> <!-- Added for odometry -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
