<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_follower</name>
  <version>1.0.0</version>
  <description>
    Refactored wall-following controller combining:
    - Marcus's LidarProcessor for clean sensor abstraction
    - Taylor's intelligent path selection logic
    - Proper object-oriented design
  </description>
  
  <maintainer email="marcus.milen1@gmail.com">Marcus</maintainer>
  <maintainer email="taylor@example.com">Taylor</maintainer>
  
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>lidar_processor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

