<?xml version="1.0"?>
<package format="3">
  <name>taylor_driver</name>
  <version>0.0.1</version>
  <description>Simple forward + 90 degree turn driver using lidar + odometry</description>
  <maintainer email="you@example.com">Taylor</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
