<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_mapper</name>
  <version>2.0.0</version>
  <description>
    Records and visualises robot trajectory during maze navigation.
    Works with any maze solver by subscribing to odometry data.
  </description>
  
  <maintainer email="marcus.milen1@gmail.com">Marcus</maintainer>
  
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

    
  <exec_depend>rclpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
